[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-magic"
version = "0.1.0"
description = "A Jupyter/IPython magic command for generating code using GPT."
authors = [{name = "BIFF", email = "info@biff.ai"}]
license = "MIT"
readme = "README.md"
homepage = "https://biff.ai"
repository = "https://github.com/biff-ai/gpt-magic"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[options]
packages = "find:"
install_requires =
    ipython
    openai
    requests
python_requires = ">=3.6"

[options.entry_points]
ipython.ipython_extension =
    gpt_magic = gpt_magic:load_ipython_extension

